[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-experiments"
version = "0.1.0"
description = "Personal experiment repo entry point for the shared rl-harness library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rl-harness",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["experiments*"]
namespaces = true

[tool.uv.sources]
# Bootstrap clones/links the library beside this repo as ../rl-harness.
rl-harness = { path = "../rl-harness", editable = true }

[tool.pytest.ini_options]
markers = ["slow: long-running tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
devops = [
    "vastai>=0.2.0",
]
